Added optimization in Dockerfile